umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_sm.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "Sm#n#u6"} :bonds [] :charge 0 :spin "#u6 #s7"}} :counts {:success true :output {:atoms {"0" "Sm#n4"} :bonds [] :charge 0 :spin "#u0 #s1"}}}
